fix gap

--- a/src/components/main/offers/offers.css
+++ b/src/components/main/offers/offers.css
@@ -113,7 +113,8 @@
 
 .object-params .param div div {
     margin-top: 6px;
-    gap: 10px;
+    column-gap: 10px;
+    row-gap: 0;
 }
 
 .object-params .description p {
@@ -225,7 +226,7 @@
 .build-params {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 20px;
+    row-gap: 10px;
 }
 
 .build-params_param {
